--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>About Us - Caverta</title>
+	<title>About Us - Zaika</title>
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
 	<!-- Owl Carousel -->
 	<link rel='stylesheet' id='owl-carousel' href='js/owl-carousel/owl.carousel.min.css' type='text/css' media='all' />
 	<!-- Main CSS File -->
-	<link rel='stylesheet' id='caverta-style-css' href='style.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='Zaika-style-css' href='style.css' type='text/css' media='all' />
 	<!-- favicons -->
 	<link rel="icon" href="images/icons/favicon-32x32.png" sizes="32x32" />
 	<link rel="icon" href="images/icons/favicon-192x192.png" sizes="192x192" />
@@ -40,13 +40,13 @@
 				<li class="menu-item  ">
 					<a href="index.html">Home</a>
 				</li>
-				<li class="menu-item ">
+				<li class="menu-item current-menu-item">
 					<a href="about-us.html">About Us</a>
 				</li>
 				<li class="menu-item menu-item-has-children ">
 					<a href="menu.html">Menu</a>
 					<ul class="sub-menu">
-						<li class="menu-item"><a href="menu.html">Menu</a></li>
+						<li class="menu-item"><a href="menu.html">Takeout Menu</a></li>
 						<li class="menu-item"><a href="dine-in-menu.html">Dine-In Menu</a></li>
 
 					</ul>
@@ -82,13 +82,15 @@
 		<!-- modal-menu-container -->
 		<div class="menu-contact">
 			<div class="mobile-btn">
-				<a href="https://order.toasttab.com/online/zaika" class="slider-btn">Order Online</a> <a
+				<a href="https://order.toasttab.com/online/zaika" class="slider-btn">Order Online</a>
+				<br />
+				<br /><a
 					href="https://www.opentable.com/restref/client/?restref=1064509&lang=en-US&ot_source=Restaurant%20website&corrid=b15f3ae9-7aab-420d-b97e-a5862f3d9d92"
-					class="view-more">Book a Table</a>
+					class="view-more">Reservation</a>
 			</div>
 			<ul class="mobile-contact">
-				<li class="mobile-address">58 Ralph Ave<br />
-					New York, New York 1111
+				<li class="mobile-address">1100 Pike St<br>
+					Seattle, WA 98101
 				</li>
 				<li class="mobile-phone"><a href="tel:+(206) 432-9355
    
@@ -113,8 +115,8 @@
 		</div>
 		<!-- /nav-button-holder-->
 		<!-- LOGO -->
-		<div class="logo logo-1"><a href="index.html"><img class="img-fluid" src="images/caverta-logo.png"
-					alt="Caverta" /></a></div>
+		<div class="logo logo-1"><a href="index.html"><img class="img-fluid" src="images/Caverta-logo.png"
+					alt="Zaika" /></a></div>
 		<!-- MENU -->
 		<nav class="nav-holder nav-holder-1">
 			<ul class="menu-nav menu-nav-1">
@@ -127,7 +129,7 @@
 				<li class="menu-item menu-item-has-children ">
 					<a href="menu.html">Menu</a>
 					<ul class="sub-menu">
-						<li class="menu-item"><a href="menu.html">Menu</a></li>
+						<li class="menu-item"><a href="menu.html">Takeout Menu</a></li>
 						<li class="menu-item"><a href="dine-in-menu.html">Dine-In Menu</a></li>
 
 					</ul>
@@ -164,7 +166,7 @@
 			<a href="https://order.toasttab.com/online/zaika" class="slider-btn">Order Online</a>
 			<div class="btn-header btn-header1"> <a
 					href="https://www.opentable.com/restref/client/?restref=1064509&lang=en-US&ot_source=Restaurant%20website&corrid=b15f3ae9-7aab-420d-b97e-a5862f3d9d92"
-					class="view-more">Book a Table</a>
+					class="view-more">Reservation</a>
 			</div>
 		</div>
 		<!-- /social-btn-top1 -->
@@ -180,10 +182,10 @@
 	</section>
 	<style>
 		.single-post-title {
-		   font-size: clamp(30px, 4vw, 50px);
-		   /* Adjusts based on screen size */
+			font-size: clamp(30px, 4vw, 50px);
+			/* Adjusts based on screen size */
 		}
-	 </style>
+	</style>
 	<!-- /TOP IMAGE -->
 	<!-- WRAP CONTENT -->
 	<div id="wrap-content" class="page-content custom-page-template">
@@ -281,6 +283,104 @@
 			<!-- /container -->
 		</div>
 		<!-- /SECTION 4 -->
+		<style>
+			.about-us-25 .row {
+				display: flex;
+				align-items: flex-start;
+				/* Align content from the top */
+				justify-content: center;
+				flex-wrap: wrap;
+				/* Prevents overflow */
+			}
+
+			.about-us-25 .col-md-6 {
+				padding: 20px;
+			}
+
+			.about-us-25 .alignc {
+				text-align: left;
+			}
+
+			.about-us-25 h2 {
+				margin-bottom: 15px;
+			}
+
+			.about-us-25 p {
+				font-size: 16px;
+				line-height: 1.6;
+				color: #555;
+			}
+
+			/* Ensures headings appear on the same line */
+			.about-us-25 .icon-box-holder {
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+				height: 100%;
+			}
+
+			/* Makes both text sections equal in height */
+			.about-us-25 .icon-box-content {
+				flex: 1;
+			}
+
+			.about-us-25 .icon-box-content h5 {
+				font-size: 20px;
+				color: var(--headings-color);
+				margin-bottom: 10px;
+				font-weight: 600;
+			}
+
+			.about-us-25 .icon-box-content p {
+				font-size: 15px;
+				line-height: 1.6;
+			}
+
+			/* Image styling */
+			.about-us-25 .row img {
+				width: 100%;
+				height: auto;
+				border-radius: 0px;
+				box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.15);
+				transition: transform 0.3s ease-in-out;
+			}
+
+			.about-us-25 .row img:hover {
+				transform: scale(1.05);
+			}
+
+			/* Responsive Fixes */
+			@media (max-width: 992px) {
+				.about-us-25 .row {
+					flex-direction: column;
+					text-align: center;
+				}
+
+				.about-us-25 .col-md-6 {
+					text-align: center;
+				}
+			}
+
+			@media (max-width: 767px) {
+
+				/* For mobile screens */
+				.about-us-25 .image-container {
+					display: flex;
+					flex-direction: row;
+					/* Ensures images stay side by side */
+					justify-content: center;
+					/* Centers images */
+					gap: 10px;
+					/* Adds spacing between images */
+				}
+
+				.about-us-25 .image-container img {
+					width: 45%;
+					/* Each image takes up 45% of the container */
+					height: auto;
+				}
+			}
+		</style>
 		<!-- SECTION 5 -->
 		<div id="about-us-25" class="home-section about-us-25">
 			<div class="container">
@@ -292,14 +392,15 @@
 								thoughtfully as food and wine.</p>
 						</div>
 						<div class="row">
-							<div class="col-md-6 margin-b24">
+							<div class="col-md-6">
 								<div class="icon-box-holder">
-									<div class="icon-box-img">
+									<!-- <div class="icon-box-img">
 										<i class="fas fa-utensil-spoon"></i>
-									</div>
+									</div> -->
 									<!-- /icon-box-img -->
 									<div class="icon-box-content">
 										<h5>What Zaika Means to Us</h5>
+										<br />
 										<p>In Hindi, “Zaika” means “taste,” but for us, it's much more. It's about
 											creating moments of surprise and joy when something truly special is
 											experienced. Every dish we serve is crafted with care, blending traditional
@@ -312,11 +413,11 @@
 								<!-- /icon-box-holder -->
 							</div>
 							<!-- /col-md-6 -->
-							<div class="col-md-6 margin-b24">
+							<div class="col-md-6">
 								<div class="icon-box-holder">
-									<div class="icon-box-img">
+									<!-- <div class="icon-box-img">
 										<i class="fas fa-star"></i>
-									</div>
+									</div> -->
 									<!-- /icon-box-img -->
 									<div class="icon-box-content">
 										<h5>Indian Cuisine with a Modern Twist </h5>
@@ -356,6 +457,7 @@
 			</div>
 			<!-- /container -->
 		</div>
+
 		<!-- /SECTION 5 -->
 		<!-- SECTION 6 -->
 		<!-- <div id="aboutme-24" class="home-section aboutme-24">
@@ -377,75 +479,175 @@
 	<!-- FOOTER -->
 	<footer class="custom-footer">
 		<div class="container">
-		   <div class="custom-footer-widgets">
-			  <div class="custom-footer-row">
-				 <!-- FOOTER COLUMN 1 -->
-				 <div class="custom-footer-col">
-					<div class="custom-foo-block">
-					   <div class="widget widget-footer widget_text">
-						  <div class="textwidget">
-							 <p><img class="footer-logo" src="images/caverta-logo.png" alt="Zaika Logo"></p>
-							 <p>For a truly memorable dining experience, reserve in advance. Come and taste our remarkable food and wine.</p>
-						  </div>
-					   </div>
+			<div class="custom-footer-widgets">
+				<div class="custom-footer-row">
+					<!-- FOOTER COLUMN 1 -->
+					<div class="custom-footer-col">
+						<div class="custom-foo-block">
+							<div class="widget widget-footer widget_text">
+								<div class="textwidget">
+									<p><img class="footer-logo" src="images/Caverta-logo.png" alt="Zaika Logo"></p>
+									<p>For a truly memorable dining experience, reserve in advance. Come and taste our
+										remarkable
+										food and wine.</p>
+								</div>
+							</div>
+						</div>
 					</div>
-				 </div>
-				 <!-- FOOTER COLUMN 2 -->
-				 <div class="custom-footer-col">
-					<div class="custom-foo-block">
-					   <div class="widget widget-footer widget_text">
-						  <h5 class="widgettitle"><span>Address</span></h5>
-						  <div class="textwidget">
-							 <p>1100 Pike St<br>Seattle, WA 98101</p>
-							 <p><a href="tel:+12064329355">(206) 432-9355</a><br>
-								<a href="mailto:zaikaseattle@gmail.com">zaikaseattle@gmail.com</a>
-							 </p>
-						  </div>
-					   </div>
+					<!-- FOOTER COLUMN 2 -->
+					<div class="custom-footer-col">
+						<div class="custom-foo-block">
+							<div class="widget widget-footer widget_text">
+								<h5 class="widgettitle"><span>Address</span></h5>
+								<div class="textwidget">
+									<p class="address">1100 Pike St<br>Seattle, WA 98101</p>
+									<p class="contact-info"><a href="tel:+12064329355">(206) 432-9355</a><br>
+										<a href="mailto:zaikaseattle@gmail.com">zaikaseattle@gmail.com</a>
+									</p>
+								</div>
+							</div>
+						</div>
 					</div>
-				 </div>
-				 <!-- FOOTER COLUMN 3 -->
-				 <div class="custom-footer-col">
-					<div class="custom-foo-block">
-					   <div class="widget widget-footer widget_text">
-						  <h5 class="widgettitle"><span>Quick Links</span></h5>
-						  <div class="textwidget">
-							 <ul>
-								<li><a href="index.html">Home</a></li>
-								<li><a href="menu.html">Menu</a></li>
-								<li><a href="reservation.html">Reservation</a></li>
-								<li><a href="catering.html">Catering</a></li>
-							 </ul>
-						  </div>
-					   </div>
+					<!-- FOOTER COLUMN 3 -->
+					<div class="custom-footer-col">
+						<div class="custom-foo-block">
+							<div class="widget widget-footer widget_text">
+								<h5 class="widgettitle"><span>Quick Links</span></h5>
+								<div class="textwidget">
+									<ul>
+										<li><a href="index.html">Home</a></li>
+										<li><a href="menu.html">Menu</a></li>
+										<li><a
+												href="https://www.opentable.com/restref/client/?restref=1064509">Reservation</a>
+										</li>
+										<li><a href="catering.html">Catering</a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
 					</div>
-				 </div>
-				 <!-- FOOTER COLUMN 4 -->
-				 <div class="custom-footer-col">
-					<div class="custom-foo-block custom-foo-last">
-					   <div class="widget widget-footer widget_text">
-						  <h5 class="widgettitle"><span>More Info</span></h5>
-						  <div class="textwidget">
-							 <ul>
-								<li><a href="contact.html">Contact Us</a></li>
-								<li><a href="#">Gallery</a></li>
-							 </ul>
-						  </div>
-					   </div>
+					<!-- FOOTER COLUMN 4 -->
+					<div class="custom-footer-col">
+						<div class="custom-foo-block custom-foo-last">
+							<div class="widget widget-footer widget_text">
+								<h5 class="widgettitle"><span>More Info</span></h5>
+								<div class="textwidget">
+									<ul>
+										<li><a href="contact.html">Contact Us</a></li>
+										<li><a href="gallery.html">Gallery</a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
 					</div>
-				 </div>
-			  </div>
-		   </div>
-		   <!-- COPYRIGHT & SOCIAL ICONS -->
-		   <div class="custom-footer-copy">
-			  <p>Copyright &copy; 2025, Zaika.</p>
-			  <ul class="custom-footer-social">
-				 <li><a href="https://www.facebook.com/share/1Dsh5fcV8X/?mibextid=wwXIfr" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-				 <li><a href="https://www.instagram.com/zaikaseattle/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-			  </ul>
-		   </div>
+				</div>
+			</div>
+			<!-- COPYRIGHT & SOCIAL ICONS -->
+			<div class="custom-footer-copy">
+				<p>Copyright &copy; 2025, Zaika.</p>
+				<br />
+				<ul class="custom-footer-social">
+					<li><a href="https://www.facebook.com/share/1Dsh5fcV8X/" target="_blank"><i
+								class="fab fa-facebook-f"></i></a></li>
+					<li><a href="https://www.instagram.com/zaikaseattle/" target="_blank"><i
+								class="fab fa-instagram"></i></a></li>
+				</ul>
+			</div>
 		</div>
-	 </footer>
+	</footer>
+
+	<style>
+		/* Footer Fixes */
+		.custom-footer {
+			background-color: #f8f8f8;
+			padding: 20px 10px;
+			text-align: center;
+		}
+
+		/* Footer Alignment Fix */
+		.custom-footer .widgettitle {
+			margin-bottom: 10px;
+			font-size: 18px;
+			font-weight: bold;
+		}
+
+		.custom-footer .textwidget {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			/* Centering content */
+			text-align: center;
+		}
+
+		.custom-footer .contact-info {
+			margin-top: 5px;
+		}
+
+		.custom-footer .custom-footer-col {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+
+		.custom-footer .custom-footer-col .textwidget p {
+			margin: 5px 0;
+		}
+
+		/* Fix Address Alignment */
+		.custom-footer .address,
+		.custom-footer .contact-info {
+			display: block;
+			text-align: center;
+			width: 100%;
+		}
+
+
+
+		/* Stack Columns in Mobile View */
+		@media (max-width: 600px) {
+			.custom-footer-row {
+				display: flex;
+				flex-direction: column;
+				text-align: center;
+			}
+
+			.custom-footer-col {
+				width: 100%;
+				padding: 10px 0;
+			}
+
+			.footer-logo {
+				max-width: 120px;
+				height: auto;
+			}
+
+			.custom-footer-copy {
+				margin-top: 10px;
+			}
+		}
+
+		@media (max-width: 600px) {
+			.textwidget img {
+				max-width: 100px;
+				/* Reduce the logo size */
+				height: auto;
+				display: block;
+				margin: 0 auto;
+				/* Center align */
+			}
+
+			.textwidget {
+				text-align: center;
+				/* Ensure parent container centers the image */
+			}
+
+			.address,
+			.contact-info {
+				text-align: center;
+				/* Center align the address and contact details */
+			}
+		}
+	</style>
 	<!-- /FOOTER -->
 	<div class="scrollup">
 		<a class="scrolltop" href="#">
