--- a/dine-in-menu.html
+++ b/dine-in-menu.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Menu Accordion - Caverta</title>
+   <title>Menu Accordion - Zaika</title>
    <!-- Google Fonts -->
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
    <!-- Owl Carousel -->
    <link rel='stylesheet' id='owl-carousel' href='js/owl-carousel/owl.carousel.min.css' type='text/css' media='all' />
    <!-- Main CSS File -->
-   <link rel='stylesheet' id='caverta-style-css' href='style.css' type='text/css' media='all' />
+   <link rel='stylesheet' id='Zaika-style-css' href='style.css' type='text/css' media='all' />
    <!-- favicons -->
    <link rel="icon" href="images/icons/favicon-32x32.png" sizes="32x32" />
    <link rel="icon" href="images/icons/favicon-192x192.png" sizes="192x192" />
@@ -37,7 +37,7 @@
          </div>
          <!-- MOBILE MENU -->
          <ul class="menu-mobile">
-            <li class="menu-item  current-menu-item">
+            <li class="menu-item ">
                <a href="index.html">Home</a>
             </li>
             <li class="menu-item ">
@@ -78,13 +78,15 @@
       <!-- modal-menu-container -->
       <div class="menu-contact">
          <div class="mobile-btn">
-            <a href="https://order.toasttab.com/online/zaika" class="slider-btn">Order Online</a> <a
+            <a href="https://order.toasttab.com/online/zaika" class="slider-btn">Order Online</a>
+            <br />
+            <br /><a
                href="https://www.opentable.com/restref/client/?restref=1064509&lang=en-US&ot_source=Restaurant%20website&corrid=b15f3ae9-7aab-420d-b97e-a5862f3d9d92"
-               class="view-more">Book a Table</a>
+               class="view-more">Reservation</a>
          </div>
          <ul class="mobile-contact">
-            <li class="mobile-address">58 Ralph Ave<br />
-               New York, New York 1111
+            <li class="mobile-address">1100 Pike St<br>
+               Seattle, WA 98101
             </li>
             <li class="mobile-phone"><a href="tel:+(206) 432-9355
 
@@ -109,8 +111,8 @@
       </div>
       <!-- /nav-button-holder-->
       <!-- LOGO -->
-      <div class="logo logo-1"><a href="index.html"><img class="img-fluid" src="images/caverta-logo.png"
-               alt="Caverta" /></a></div>
+      <div class="logo logo-1"><a href="index.html"><img class="img-fluid" src="images/Caverta-logo.png"
+               alt="Zaika" /></a></div>
       <!-- MENU -->
       <nav class="nav-holder nav-holder-1">
          <ul class="menu-nav menu-nav-1">
@@ -164,7 +166,7 @@
          <a href="https://order.toasttab.com/online/zaika" class="slider-btn">Order Online</a>
          <div class="btn-header btn-header1"> <a
                href="https://www.opentable.com/restref/client/?restref=1064509&lang=en-US&ot_source=Restaurant%20website&corrid=b15f3ae9-7aab-420d-b97e-a5862f3d9d92"
-               class="view-more">Book a Table</a>
+               class="view-more">Reservation</a>
          </div>
       </div>
       <!-- /social-btn-top1 -->
@@ -184,6 +186,22 @@
       }
    </style>
    <!-- /TOP IMAGE -->
+   <style>
+      .food-menu.menu-2cols li {
+         display: flex;
+         flex-direction: column;
+         justify-content: start;
+         padding-bottom: 10px;
+         /* Ensures spacing */
+         border-bottom: 1px solid #ccc;
+         /* Thin line below each item */
+      }
+
+      .food-menu.menu-2cols li:last-child {
+         border-bottom: none;
+         /* Removes the line from the last item */
+      }
+   </style>
    <!-- WRAP CONTENT -->
    <div id="wrap-content" class="page-content custom-page-template">
       <div class="container">
@@ -436,7 +454,7 @@
                               </div>
                            </li>
                            <!-- /DESSERTS -->
-                         <!-- Dessert -->
+                           <!-- Dessert -->
                            <li>
                               <div class="menu-title-section"><a href="#starters">Desserts</a></div>
                               <div id="starters" class="menu-section">
@@ -683,7 +701,7 @@
                               </div>
                            </li>
                            <li>
-                              <div class="menu-title-section"><a href="#wine-beer">BOTTLE CAN BEER</a></div>
+                              <div class="menu-title-section"><a href="#wine-beer">WINE BY BOTTLE</a></div>
                               <div id="wine-beer" class="menu-section">
                                  <ul class="food-menu menu-2cols">
                                     <li>
@@ -694,7 +712,8 @@
                                        <h4>In Sheep's Clothing Cabrent - $52</h4>
 
                                     </li>
-                                    <li>GROVER ZAMPA SOIREE BRUT ROSE' - $40</h4>
+                                    <li>
+                                       <h4>GROVER ZAMPA SOIREE BRUT ROSE' - $40</h4>
 
                                     </li>
                                     <li>
@@ -713,7 +732,8 @@
                                        <h4>CHATEAU STE. MICHELLE RIESLING - $24</h4>
 
                                     </li>
-                                    <li>TREVERI CELLARS BLANC DE BLANC BRUT - $36</h4>
+                                    <li>
+                                       <h4>TREVERI CELLARS BLANC DE BLANC BRUT - $36</h4>
 
                                     </li>
                                     <li>
@@ -757,8 +777,9 @@
                   <div class="custom-foo-block">
                      <div class="widget widget-footer widget_text">
                         <div class="textwidget">
-                           <p><img class="footer-logo" src="images/caverta-logo.png" alt="Zaika Logo"></p>
-                           <p>For a truly memorable dining experience, reserve in advance. Come and taste our remarkable food and wine.</p>
+                           <p><img class="footer-logo" src="images/Caverta-logo.png" alt="Zaika Logo"></p>
+                           <p>For a truly memorable dining experience, reserve in advance. Come and taste our remarkable
+                              food and wine.</p>
                         </div>
                      </div>
                   </div>
@@ -769,8 +790,8 @@
                      <div class="widget widget-footer widget_text">
                         <h5 class="widgettitle"><span>Address</span></h5>
                         <div class="textwidget">
-                           <p>1100 Pike St<br>Seattle, WA 98101</p>
-                           <p><a href="tel:+12064329355">(206) 432-9355</a><br>
+                           <p class="address">1100 Pike St<br>Seattle, WA 98101</p>
+                           <p class="contact-info"><a href="tel:+12064329355">(206) 432-9355</a><br>
                               <a href="mailto:zaikaseattle@gmail.com">zaikaseattle@gmail.com</a>
                            </p>
                         </div>
@@ -786,7 +807,8 @@
                            <ul>
                               <li><a href="index.html">Home</a></li>
                               <li><a href="menu.html">Menu</a></li>
-                              <li><a href="reservation.html">Reservation</a></li>
+                              <li><a href="https://www.opentable.com/restref/client/?restref=1064509">Reservation</a>
+                              </li>
                               <li><a href="catering.html">Catering</a></li>
                            </ul>
                         </div>
@@ -801,7 +823,7 @@
                         <div class="textwidget">
                            <ul>
                               <li><a href="contact.html">Contact Us</a></li>
-                              <li><a href="#">Gallery</a></li>
+                              <li><a href="gallery.html">Gallery</a></li>
                            </ul>
                         </div>
                      </div>
@@ -812,13 +834,109 @@
          <!-- COPYRIGHT & SOCIAL ICONS -->
          <div class="custom-footer-copy">
             <p>Copyright &copy; 2025, Zaika.</p>
+            <br />
             <ul class="custom-footer-social">
-               <li><a href="https://www.facebook.com/share/1Dsh5fcV8X/?mibextid=wwXIfr" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-               <li><a href="https://www.instagram.com/zaikaseattle/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+               <li><a href="https://www.facebook.com/share/1Dsh5fcV8X/" target="_blank"><i
+                        class="fab fa-facebook-f"></i></a></li>
+               <li><a href="https://www.instagram.com/zaikaseattle/" target="_blank"><i
+                        class="fab fa-instagram"></i></a></li>
             </ul>
          </div>
       </div>
    </footer>
+
+   <style>
+      /* Footer Fixes */
+      .custom-footer {
+         background-color: #f8f8f8;
+         padding: 20px 10px;
+         text-align: center;
+      }
+
+      /* Footer Alignment Fix */
+      .custom-footer .widgettitle {
+         margin-bottom: 10px;
+         font-size: 18px;
+         font-weight: bold;
+      }
+
+      .custom-footer .textwidget {
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+         /* Centering content */
+         text-align: center;
+      }
+
+      .custom-footer .contact-info {
+         margin-top: 5px;
+      }
+
+      .custom-footer .custom-footer-col {
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+      }
+
+      .custom-footer .custom-footer-col .textwidget p {
+         margin: 5px 0;
+      }
+
+      /* Fix Address Alignment */
+      .custom-footer .address,
+      .custom-footer .contact-info {
+         display: block;
+         text-align: center;
+         width: 100%;
+      }
+
+
+
+      /* Stack Columns in Mobile View */
+      @media (max-width: 600px) {
+         .custom-footer-row {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+         }
+
+         .custom-footer-col {
+            width: 100%;
+            padding: 10px 0;
+         }
+
+         .footer-logo {
+            max-width: 120px;
+            height: auto;
+         }
+
+         .custom-footer-copy {
+            margin-top: 10px;
+         }
+      }
+
+      @media (max-width: 600px) {
+         .textwidget img {
+            max-width: 100px;
+            /* Reduce the logo size */
+            height: auto;
+            display: block;
+            margin: 0 auto;
+            /* Center align */
+         }
+
+         .textwidget {
+            text-align: center;
+            /* Ensure parent container centers the image */
+         }
+
+         .address,
+         .contact-info {
+            text-align: center;
+            /* Center align the address and contact details */
+         }
+      }
+   </style>
    <!-- /FOOTER -->
    <div class="scrollup">
       <a class="scrolltop" href="#">
