--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <!-- Owl Carousel -->
    <link rel='stylesheet' id='owl-carousel' href='js/owl-carousel/owl.carousel.min.css' type='text/css' media='all' />
    <!-- Main CSS File -->
-   <link rel='stylesheet' id='caverta-style-css' href='style.css' type='text/css' media='all' />
+   <link rel='stylesheet' id='Zaika-style-css' href='style.css' type='text/css' media='all' />
    <!-- favicons -->
    <link rel="icon" href="images/icons/favicon-32x32.png" sizes="32x32" />
    <link rel="icon" href="images/icons/favicon-192x192.png" sizes="192x192" />
@@ -43,7 +43,7 @@
             <li class="menu-item ">
                <a href="about-us.html">About Us</a>
             </li>
-            <li class="menu-item current-menu-item menu-item-has-children ">
+            <li class="menu-item menu-item-has-children ">
                <a href="menu.html">Menu</a>
                <ul class="sub-menu">
                   <li class="menu-item"><a href="menu.html">Takeout Menu</a></li>
@@ -75,13 +75,16 @@
       </div>
       <!-- modal-menu-container -->
       <div class="menu-contact">
-         <div class="mobile-btn"> <a
+         <div class="mobile-btn">
+            <a href="https://order.toasttab.com/online/zaika" class="slider-btn">Order Online</a>
+            <br />
+            <br /><a
                href="https://www.opentable.com/restref/client/?restref=1064509&lang=en-US&ot_source=Restaurant%20website&corrid=b15f3ae9-7aab-420d-b97e-a5862f3d9d92"
-               class="view-more">Book a Table</a></div>
-         <a href="https://order.toasttab.com/online/zaika" class="slider-btn">Order Online</a>
+               class="view-more">Reservation</a>
+         </div>
          <ul class="mobile-contact">
-            <li class="mobile-address">58 Ralph Ave<br />
-               New York, New York 1111
+            <li class="mobile-address">1100 Pike St<br>
+               Seattle, WA 98101
             </li>
             <li class="mobile-phone"><a href="tel:+(206) 432-9355
 
@@ -106,8 +109,8 @@
       </div>
       <!-- /nav-button-holder-->
       <!-- LOGO -->
-      <div class="logo logo-1"><a href="index.html"><img class="img-fluid" src="images/caverta-logo.png"
-               alt="Caverta" /></a></div>
+      <div class="logo logo-1"><a href="index.html"><img class="img-fluid" src="images/Caverta-logo.png"
+               alt="Zaika" /></a></div>
       <!-- MENU -->
       <nav class="nav-holder nav-holder-1">
          <ul class="menu-nav menu-nav-1">
@@ -157,7 +160,7 @@
          <a href="https://order.toasttab.com/online/zaika" class="slider-btn">Order Online</a>
          <div class="btn-header btn-header1"> <a
                href="https://www.opentable.com/restref/client/?restref=1064509&lang=en-US&ot_source=Restaurant%20website&corrid=b15f3ae9-7aab-420d-b97e-a5862f3d9d92"
-               class="view-more">Book a Table</a>
+               class="view-more">Reservation</a>
          </div>
       </div>
       <!-- /social-btn-top1 -->
@@ -171,9 +174,10 @@
             <div class="slider-caption">
                <div class="slider-text">
                   <div class="intro-txt">Experience Flavors That <br>Bring People Together</div>
-                  <!-- <h2>Caverta</h2> -->
+                  <!-- <h2>Zaika</h2> -->
                   <!-- <p>Experience Flavors That Bring People Together<br /> -->
-                  <a href="https://order.toasttab.com/online/zaika" class="slider-btn">Order Online</a>
+                  <a href="https://www.opentable.com/restref/client/?restref=1064509&lang=en-US&ot_source=Restaurant%20website&corrid=60e8f726-a5e0-487c-887b-bc3e932e12b0"
+                     class="slider-btn">Reservation</a>
                   </p>
                </div>
             </div>
@@ -185,9 +189,10 @@
             <div class="slider-caption">
                <div class="slider-text">
                   <div class="intro-txt">Experience Flavors That <br>Bring People Together</div>
-                  <!-- <h2>Caverta</h2> -->
+                  <!-- <h2>Zaika</h2> -->
                   <!-- <p>We offer a highly seasonal and continuously evolving tasting menu experience.<br /> -->
-                  <a href="https://order.toasttab.com/online/zaika" class="slider-btn">Order Online</a>
+                  <a href="https://www.opentable.com/restref/client/?restref=1064509&lang=en-US&ot_source=Restaurant%20website&corrid=60e8f726-a5e0-487c-887b-bc3e932e12b0"
+                     class="slider-btn">Reservation</a>
                   </p>
                </div>
             </div>
@@ -199,9 +204,10 @@
             <div class="slider-caption">
                <div class="slider-text">
                   <div class="intro-txt">Experience Flavors That <br>Bring People Together</div>
-                  <!-- <h2>Caverta</h2> -->
+                  <!-- <h2>Zaika</h2> -->
                   <!-- <p>We offer a highly seasonal and continuously evolving tasting menu experience.<br /> -->
-                  <a href="https://order.toasttab.com/online/zaika" class="slider-btn">Order Online</a>
+                  <a href="https://www.opentable.com/restref/client/?restref=1064509&lang=en-US&ot_source=Restaurant%20website&corrid=60e8f726-a5e0-487c-887b-bc3e932e12b0"
+                     class="slider-btn">Reservation</a>
                   </p>
                </div>
             </div>
@@ -222,6 +228,7 @@
             <!-- /col-md-6 -->
             <div class="col-md-6">
                <div class="alignc mobile-margin-b48">
+                  <br />
                   <div class="smalltitle margin-b16">Welcome to Zaika</div>
                   <h2 class="home-title">A Taste of India in Seattle</h2>
                   <p>At Zaika, located at 1100 Pike St, Seattle, WA, we bring the rich flavors of Indian cuisine to the
@@ -357,9 +364,9 @@
                      Kofta and the rich Kashmiri Malai Kofta, our menu offers something for everyone. We've carefully
                      designed our dishes to combine the best of Indian cooking with a modern touch, making our food
                      approachable and exciting for all.</p>
-                     <p style="text-align: center;">
-                        <a class="view-more margin-t24" href="menu.html">View Menu</a>
-                      </p>                      
+                  <p style="text-align: center;">
+                     <a class="view-more margin-t24" href="menu.html">View Menu</a>
+                  </p>
                </div>
             </div>
             <!-- /col-md-6 -->
@@ -472,7 +479,7 @@
                      can bring the flavors of Zaika to your next event.</p>
                   <p style="text-align: center;">
                      <a class="view-more margin-t24" href="catering.html">Request A Quote</a>
-                   </p> 
+                  </p>
                </div>
             </div>
             <!-- /col-md-6 -->
@@ -661,7 +668,7 @@
                <div class="row">
                   <div class="col-md-12">
                      <div class="alignc">
-                        <div class="smalltitle margin-b16">Discover</div>
+                        <!-- <div class="smalltitle margin-b16">Discover</div> -->
                         <h2 class="home-title">Frequently Asked Question</h2>
 
                      </div>
@@ -818,8 +825,9 @@
                   <div class="custom-foo-block">
                      <div class="widget widget-footer widget_text">
                         <div class="textwidget">
-                           <p><img class="footer-logo" src="images/caverta-logo.png" alt="Zaika Logo"></p>
-                           <p>For a truly memorable dining experience, reserve in advance. Come and taste our remarkable food and wine.</p>
+                           <p><img class="footer-logo" src="images/Caverta-logo.png" alt="Zaika Logo"></p>
+                           <p>For a truly memorable dining experience, reserve in advance. Come and taste our remarkable
+                              food and wine.</p>
                         </div>
                      </div>
                   </div>
@@ -830,8 +838,8 @@
                      <div class="widget widget-footer widget_text">
                         <h5 class="widgettitle"><span>Address</span></h5>
                         <div class="textwidget">
-                           <p>1100 Pike St<br>Seattle, WA 98101</p>
-                           <p><a href="tel:+12064329355">(206) 432-9355</a><br>
+                           <p class="address">1100 Pike St<br>Seattle, WA 98101</p>
+                           <p class="contact-info"><a href="tel:+12064329355">(206) 432-9355</a><br>
                               <a href="mailto:zaikaseattle@gmail.com">zaikaseattle@gmail.com</a>
                            </p>
                         </div>
@@ -847,7 +855,8 @@
                            <ul>
                               <li><a href="index.html">Home</a></li>
                               <li><a href="menu.html">Menu</a></li>
-                              <li><a href="reservation.html">Reservation</a></li>
+                              <li><a href="https://www.opentable.com/restref/client/?restref=1064509">Reservation</a>
+                              </li>
                               <li><a href="catering.html">Catering</a></li>
                            </ul>
                         </div>
@@ -862,7 +871,7 @@
                         <div class="textwidget">
                            <ul>
                               <li><a href="contact.html">Contact Us</a></li>
-                              <li><a href="#">Gallery</a></li>
+                              <li><a href="gallery.html">Gallery</a></li>
                            </ul>
                         </div>
                      </div>
@@ -873,14 +882,110 @@
          <!-- COPYRIGHT & SOCIAL ICONS -->
          <div class="custom-footer-copy">
             <p>Copyright &copy; 2025, Zaika.</p>
+            <br />
             <ul class="custom-footer-social">
-               <li><a href="https://www.facebook.com/share/1Dsh5fcV8X/?mibextid=wwXIfr" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-               <li><a href="https://www.instagram.com/zaikaseattle/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+               <li><a href="https://www.facebook.com/share/1Dsh5fcV8X/" target="_blank"><i
+                        class="fab fa-facebook-f"></i></a></li>
+               <li><a href="https://www.instagram.com/zaikaseattle/" target="_blank"><i
+                        class="fab fa-instagram"></i></a></li>
             </ul>
          </div>
       </div>
    </footer>
-   
+
+	<style>
+		/* Footer Fixes */
+		.custom-footer {
+			background-color: #f8f8f8;
+			padding: 20px 10px;
+			text-align: center;
+		}
+
+		/* Footer Alignment Fix */
+		.custom-footer .widgettitle {
+			margin-bottom: 10px;
+			font-size: 18px;
+			font-weight: bold;
+		}
+
+		.custom-footer .textwidget {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			/* Centering content */
+			text-align: center;
+		}
+
+		.custom-footer .contact-info {
+			margin-top: 5px;
+		}
+
+		.custom-footer .custom-footer-col {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+
+		.custom-footer .custom-footer-col .textwidget p {
+			margin: 5px 0;
+		}
+
+		/* Fix Address Alignment */
+		.custom-footer .address,
+		.custom-footer .contact-info {
+			display: block;
+			text-align: center;
+			width: 100%;
+		}
+
+
+
+		/* Stack Columns in Mobile View */
+		@media (max-width: 600px) {
+			.custom-footer-row {
+				display: flex;
+				flex-direction: column;
+				text-align: center;
+			}
+
+			.custom-footer-col {
+				width: 100%;
+				padding: 10px 0;
+			}
+
+			.footer-logo {
+				max-width: 120px;
+				height: auto;
+			}
+
+			.custom-footer-copy {
+				margin-top: 10px;
+			}
+		}
+
+		@media (max-width: 600px) {
+			.textwidget img {
+				max-width: 100px;
+				/* Reduce the logo size */
+				height: auto;
+				display: block;
+				margin: 0 auto;
+				/* Center align */
+			}
+
+			.textwidget {
+				text-align: center;
+				/* Ensure parent container centers the image */
+			}
+
+			.address,
+			.contact-info {
+				text-align: center;
+				/* Center align the address and contact details */
+			}
+		}
+	</style>
+
    <!-- /FOOTER -->
    <div class="scrollup">
       <a class="scrolltop" href="#">
