--- a/gift-card.html
+++ b/gift-card.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Caverta</title>
+    <title>Contact - Zaika</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
     <!-- Owl Carousel -->
     <link rel='stylesheet' id='owl-carousel' href='js/owl-carousel/owl.carousel.min.css' type='text/css' media='all' />
     <!-- Main CSS File -->
-    <link rel='stylesheet' id='caverta-style-css' href='style.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='Zaika-style-css' href='style.css' type='text/css' media='all' />
     <!-- favicons -->
     <link rel="icon" href="images/icons/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" href="images/icons/favicon-192x192.png" sizes="192x192" />
@@ -83,7 +83,7 @@
             <div class="mobile-btn">
                 <a href="https://order.toasttab.com/online/zaika" class="slider-btn">Order Online</a> <a
                     href="https://www.opentable.com/restref/client/?restref=1064509&lang=en-US&ot_source=Restaurant%20website&corrid=b15f3ae9-7aab-420d-b97e-a5862f3d9d92"
-                    class="view-more">Book a Table</a>
+                    class="view-more">Reservation</a>
             </div>
             <ul class="mobile-contact">
                 <li class="mobile-address">1100 Pike St<br>
@@ -112,8 +112,8 @@
         </div>
         <!-- /nav-button-holder-->
         <!-- LOGO -->
-        <div class="logo logo-1"><a href="index.html"><img class="img-fluid" src="images/caverta-logo.png"
-                    alt="Caverta" /></a></div>
+        <div class="logo logo-1"><a href="index.html"><img class="img-fluid" src="images/Caverta-logo.png"
+                    alt="Zaika" /></a></div>
         <!-- MENU -->
         <nav class="nav-holder nav-holder-1">
             <ul class="menu-nav menu-nav-1">
@@ -165,7 +165,7 @@
             <a href="https://order.toasttab.com/online/zaika" class="slider-btn">Order Online</a>
             <div class="btn-header btn-header1"> <a
                     href="https://www.opentable.com/restref/client/?restref=1064509&lang=en-US&ot_source=Restaurant%20website&corrid=b15f3ae9-7aab-420d-b97e-a5862f3d9d92"
-                    class="view-more">Book a Table</a>
+                    class="view-more">Reservation</a>
             </div>
         </div>
         <!-- /social-btn-top1 -->
@@ -249,75 +249,175 @@
     <!-- FOOTER -->
     <footer class="custom-footer">
         <div class="container">
-           <div class="custom-footer-widgets">
-              <div class="custom-footer-row">
-                 <!-- FOOTER COLUMN 1 -->
-                 <div class="custom-footer-col">
-                    <div class="custom-foo-block">
-                       <div class="widget widget-footer widget_text">
-                          <div class="textwidget">
-                             <p><img class="footer-logo" src="images/caverta-logo.png" alt="Zaika Logo"></p>
-                             <p>For a truly memorable dining experience, reserve in advance. Come and taste our remarkable food and wine.</p>
-                          </div>
-                       </div>
+            <div class="custom-footer-widgets">
+                <div class="custom-footer-row">
+                    <!-- FOOTER COLUMN 1 -->
+                    <div class="custom-footer-col">
+                        <div class="custom-foo-block">
+                            <div class="widget widget-footer widget_text">
+                                <div class="textwidget">
+                                    <p><img class="footer-logo" src="images/Caverta-logo.png" alt="Zaika Logo"></p>
+                                    <p>For a truly memorable dining experience, reserve in advance. Come and taste our
+                                        remarkable
+                                        food and wine.</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                 </div>
-                 <!-- FOOTER COLUMN 2 -->
-                 <div class="custom-footer-col">
-                    <div class="custom-foo-block">
-                       <div class="widget widget-footer widget_text">
-                          <h5 class="widgettitle"><span>Address</span></h5>
-                          <div class="textwidget">
-                             <p>1100 Pike St<br>Seattle, WA 98101</p>
-                             <p><a href="tel:+12064329355">(206) 432-9355</a><br>
-                                <a href="mailto:zaikaseattle@gmail.com">zaikaseattle@gmail.com</a>
-                             </p>
-                          </div>
-                       </div>
+                    <!-- FOOTER COLUMN 2 -->
+                    <div class="custom-footer-col">
+                        <div class="custom-foo-block">
+                            <div class="widget widget-footer widget_text">
+                                <h5 class="widgettitle"><span>Address</span></h5>
+                                <div class="textwidget">
+                                    <p class="address">1100 Pike St<br>Seattle, WA 98101</p>
+                                    <p class="contact-info"><a href="tel:+12064329355">(206) 432-9355</a><br>
+                                        <a href="mailto:zaikaseattle@gmail.com">zaikaseattle@gmail.com</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                 </div>
-                 <!-- FOOTER COLUMN 3 -->
-                 <div class="custom-footer-col">
-                    <div class="custom-foo-block">
-                       <div class="widget widget-footer widget_text">
-                          <h5 class="widgettitle"><span>Quick Links</span></h5>
-                          <div class="textwidget">
-                             <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="menu.html">Menu</a></li>
-                                <li><a href="reservation.html">Reservation</a></li>
-                                <li><a href="catering.html">Catering</a></li>
-                             </ul>
-                          </div>
-                       </div>
+                    <!-- FOOTER COLUMN 3 -->
+                    <div class="custom-footer-col">
+                        <div class="custom-foo-block">
+                            <div class="widget widget-footer widget_text">
+                                <h5 class="widgettitle"><span>Quick Links</span></h5>
+                                <div class="textwidget">
+                                    <ul>
+                                        <li><a href="index.html">Home</a></li>
+                                        <li><a href="menu.html">Menu</a></li>
+                                        <li><a
+                                                href="https://www.opentable.com/restref/client/?restref=1064509">Reservation</a>
+                                        </li>
+                                        <li><a href="catering.html">Catering</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                 </div>
-                 <!-- FOOTER COLUMN 4 -->
-                 <div class="custom-footer-col">
-                    <div class="custom-foo-block custom-foo-last">
-                       <div class="widget widget-footer widget_text">
-                          <h5 class="widgettitle"><span>More Info</span></h5>
-                          <div class="textwidget">
-                             <ul>
-                                <li><a href="contact.html">Contact Us</a></li>
-                                <li><a href="#">Gallery</a></li>
-                             </ul>
-                          </div>
-                       </div>
+                    <!-- FOOTER COLUMN 4 -->
+                    <div class="custom-footer-col">
+                        <div class="custom-foo-block custom-foo-last">
+                            <div class="widget widget-footer widget_text">
+                                <h5 class="widgettitle"><span>More Info</span></h5>
+                                <div class="textwidget">
+                                    <ul>
+                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="gallery.html">Gallery</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                 </div>
-              </div>
-           </div>
-           <!-- COPYRIGHT & SOCIAL ICONS -->
-           <div class="custom-footer-copy">
-              <p>Copyright &copy; 2025, Zaika.</p>
-              <ul class="custom-footer-social">
-                 <li><a href="https://www.facebook.com/share/1Dsh5fcV8X/?mibextid=wwXIfr" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                 <li><a href="https://www.instagram.com/zaikaseattle/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-              </ul>
-           </div>
+                </div>
+            </div>
+            <!-- COPYRIGHT & SOCIAL ICONS -->
+            <div class="custom-footer-copy">
+                <p>Copyright &copy; 2025, Zaika.</p>
+            <br />
+                <ul class="custom-footer-social">
+                    <li><a href="https://www.facebook.com/share/1Dsh5fcV8X/" target="_blank"><i
+                                class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.instagram.com/zaikaseattle/" target="_blank"><i
+                                class="fab fa-instagram"></i></a></li>
+                </ul>
+            </div>
         </div>
-     </footer>
+    </footer>
+
+	<style>
+		/* Footer Fixes */
+		.custom-footer {
+			background-color: #f8f8f8;
+			padding: 20px 10px;
+			text-align: center;
+		}
+
+		/* Footer Alignment Fix */
+		.custom-footer .widgettitle {
+			margin-bottom: 10px;
+			font-size: 18px;
+			font-weight: bold;
+		}
+
+		.custom-footer .textwidget {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			/* Centering content */
+			text-align: center;
+		}
+
+		.custom-footer .contact-info {
+			margin-top: 5px;
+		}
+
+		.custom-footer .custom-footer-col {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+
+		.custom-footer .custom-footer-col .textwidget p {
+			margin: 5px 0;
+		}
+
+		/* Fix Address Alignment */
+		.custom-footer .address,
+		.custom-footer .contact-info {
+			display: block;
+			text-align: center;
+			width: 100%;
+		}
+
+
+
+		/* Stack Columns in Mobile View */
+		@media (max-width: 600px) {
+			.custom-footer-row {
+				display: flex;
+				flex-direction: column;
+				text-align: center;
+			}
+
+			.custom-footer-col {
+				width: 100%;
+				padding: 10px 0;
+			}
+
+			.footer-logo {
+				max-width: 120px;
+				height: auto;
+			}
+
+			.custom-footer-copy {
+				margin-top: 10px;
+			}
+		}
+
+		@media (max-width: 600px) {
+			.textwidget img {
+				max-width: 100px;
+				/* Reduce the logo size */
+				height: auto;
+				display: block;
+				margin: 0 auto;
+				/* Center align */
+			}
+
+			.textwidget {
+				text-align: center;
+				/* Ensure parent container centers the image */
+			}
+
+			.address,
+			.contact-info {
+				text-align: center;
+				/* Center align the address and contact details */
+			}
+		}
+	</style>
     <!-- /FOOTER -->
     <div class="scrollup">
         <a class="scrolltop" href="#">
